crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__if.py_10.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     if False:
%%         return 1
%%     elif True:
%%         return 2
%%     else:
%%         return 0

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 1\n"]
  block1["return 2\n"]
  block2["return 0\n"]
  block3["elif True:
        return 2
    else:
        return 0\n"]
  block4["if False:
        return 1
    elif True:
        return 2
    else:
        return 0\n"]

  start --> block4
  block4 -- "False" --> block0
  block4 -- "else" --> block3
  block3 -- "True" --> block1
  block3 -- "else" --> block2
  block2 --> return
  block1 --> return
  block0 --> return

