crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__if.py_4.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     if False:
%%         return 0
%%     else:
%%         return 1
%%     return "unreachable"

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return #quot;unreachable#quot;\n"]
  block1["return 0\n"]
  block2["return 1\n"]
  block3["if False:
        return 0
    else:
        return 1\n"]

  start --> block3
  block3 -- "False" --> block1
  block3 -- "else" --> block2
  block2 --> return
  block1 --> return
  block0 --> return

